[project]
name = "airbnb-clone-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "seonghwanjo",email = "joseonghwan3021@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.7,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
